--- a/PACE++_Printed_Report.html
+++ b/PACE++_Printed_Report.html
@@ -35,7 +35,7 @@
         <body>
             <h1>PACE++ Printed Report</h1>
             <p class="report-header">Institution Name: McMaster University</p>
-            <p class="report-header">Date and Time: 08:15:2023</p>
+            <p class="report-header">Date and Time: 08:43:2023</p>
             <p class="report-header">Version: PACE++ V2.16.3</p>
             <p class="report-header">Serial Number: 000000123456</p>
 
@@ -74,7 +74,107 @@
 
        
             <h2>Parameters</h2>
-
+            <table class="tg" style="undefined;table-layout: fixed; width: 582px">
+            <colgroup>
+            <col style="width: 250.2px">
+            <col style="width: 180.2px">
+            <col style="width: 151.2px">
+            </colgroup>
+            <thead>
+            <tr>
+                <th class="tg-ev0v">Parameter Name</th>
+                <th class="tg-zci2">Value</th>
+                <th class="tg-zci2">Unit</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td class="tg-0lax">Mode</td>
+                <td class="tg-0lax">AOO</td>
+                <td class="tg-0lax"></td>
+            </tr>
+            <tr>
+                <td class="tg-0lax">Lower Rate Limit</td>
+                <td class="tg-0lax">60</td>
+                <td class="tg-0lax">ppm</td>
+            </tr>
+            <tr>
+                <td class="tg-0lax">Upper Rate Limit</td>
+                <td class="tg-0lax">120</td>
+                <td class="tg-0lax">ppm</td>
+            </tr>
+            <tr>
+                <td class="tg-0lax">Maximum Sensor Rate</td>
+                <td class="tg-0lax">120</td>
+                <td class="tg-0lax">ppm</td>
+            </tr>
+            <tr>
+                <td class="tg-0lax">AV Delay</td>
+                <td class="tg-0lax">15</td>
+                <td class="tg-0lax"></td>
+            </tr>
+            <tr>
+                <td class="tg-0lax">Atrial Amplitude</td>
+                <td class="tg-0lax">5.0</td>
+                <td class="tg-0lax">V</td>
+            </tr>
+            <tr>
+                <td class="tg-0lax">Ventricular Amplitude</td>
+                <td class="tg-0lax">5.0</td>
+                <td class="tg-0lax">V</td>
+            </tr>
+            <tr>
+                <td class="tg-0lax">Atrial Pulse Width</td>
+                <td class="tg-0lax">1</td>
+                <td class="tg-0lax">ms</td>
+            </tr>
+            <tr>
+                <td class="tg-0lax">Ventricular Pulse Width</td>
+                <td class="tg-0lax">1</td>
+                <td class="tg-0lax">ms</td>
+            </tr>
+            <tr>
+                <td class="tg-0lax">Atrial Sensitivity</td>
+                <td class="tg-0lax">4.0</td>
+                <td class="tg-0lax">mV</td>
+            </tr>
+            <tr>
+                <td class="tg-0lax">Ventricular Sensitivity</td>
+                <td class="tg-0lax">4.0</td>
+                <td class="tg-0lax">mV</td>
+            </tr>
+            <tr>
+                <td class="tg-0lax">Absolute Refractory Period</td>
+                <td class="tg-0lax">250</td>
+                <td class="tg-0lax">ms</td>
+            </tr>
+            <tr>
+                <td class="tg-0lax">Ventricular Refractory Period</td>
+                <td class="tg-0lax">320</td>
+                <td class="tg-0lax">ms</td>
+            </tr>
+            <tr>
+                <td class="tg-0lax">Post Ventricular Absolute Refractory Period</td>
+                <td class="tg-0lax">320</td>
+                <td class="tg-0lax">ms</td>
+            </tr>
+            <tr>
+                <td class="tg-0lax">Activity Threshold</td>
+                <td class="tg-0lax">4</td>
+                <td class="tg-0lax"></td>
+            </tr>
+            <tr>
+                <td class="tg-0lax">Reaction Time</td>
+                <td class="tg-0lax">30</td>
+                <td class="tg-0lax">sec</td>
+            </tr>
+            <tr>
+                <td class="tg-0lax">Response Factor</td>
+                <td class="tg-0lax">8</td>
+                <td class="tg-0lax"></td>
+            </tr>
+            </tbody>
+            </table>
 
             <!-- Add your content for each section here -->
 
